<resources>
    <string name="app_name">RomaChat</string>

    <string name="oauth_scheme" translatable="false">oauth2redirect</string>

    <string name="hint_domain">Which instance?</string>
    <string name="action_login">Login</string>
    <string name="error_invalid_domain">Invalid domain entered</string>
    <string name="error_failed_app_registration">Failed authenticating with that instance.</string>
    <string name="error_no_web_browser_found">Couldn\'t find a web browser to use.</string>
    <string name="error_authorization_unknown">An unidentified authorization error occurred.</string>
    <string name="error_authorization_denied">Authorization was denied.</string>
    <string name="error_retrieving_oauth_token">Failed getting a login token.</string>

    <string name="error_loading_common">An error occurred. Please try again</string>
    <string name="error_try_again">Try again</string>

    <string name="a11y_back">back</string>
    <string name="a11y_user_avatar">user avatar</string>
    <string name="a11y_message_media">media</string>
    <string name="a11y_attach_media">attach</string>
    <string name="a11y_camera_result">result</string>
    <string name="a11y_delete">delete</string>
    <string name="a11y_take_photo">take photo</string>
    <string name="a11y_switch_camera">switch camera</string>
    <string name="a11y_flash">flash</string>
    <string name="a11y_reply">reply</string>
    <string name="a11y_repost">repost</string>
    <string name="a11y_favorite">favorite</string>

    <string name="username_pattern">\@%s</string>

    <string name="camera_permission_rationale">To use the app, please allow access to your camera.</string>
    <string name="camera_permission_rationale_action">Turn on</string>
    <string name="camera_no_camera_found">No camera found</string>
    <string name="camera_to_chat">Chats</string>
    <string name="camera_to_feed">Feed</string>

    <string name="chat_list_title">Friends</string>
    <string name="chat_list_menu_user_search">Add friends</string>
    <string name="chat_message_user_me">ME</string>
    <string name="chat_message_date_today">Today</string>
    <string name="chat_send_message_hint">Send a message</string>

    <string name="chat_send_error_no_text">The message cannot be empty</string>
    <string name="chat_send_error_too_long_text">The message is too long</string>
    <string name="chat_send_error_post">Failed sending a message</string>
    <string name="chat_send_error_image_upload_size">The file must be less than 8MB.</string>
    <string name="chat_send_error_video_upload_size">Video files must be less than 40MB.</string>
    <string name="chat_send_error_media_upload_type">That type of file cannot be uploaded.</string>
    <string name="chat_send_error_media_upload_opening">That file could not be opened.</string>
    <string name="storage_permission_rationale">Please allow access to your storage.</string>
    <string name="chat_send_progress">Uploading…</string>
    <string name="chat_send_success">The image has been sent</string>
    <string name="chat_error_delete">Failed deleting a message</string>
    <string name="error_media_crop">Failed to crop the image</string>

    <string name="camera_recipient_title">Send to…</string>

    <string name="chat_message_delete">Delete</string>

    <string name="user_search_hint">Find friends</string>
    <string name="user_search_add">Add</string>
    <string name="user_search_added">Added</string>
    <string name="user_search_adding">Adding</string>
    <string name="profile_add_friend">Add Friend</string>
    <string name="profile_processing_friend">Requesting…</string>
    <string name="profile_remove_friend">Remove Friend</string>
    <string name="profile_chat">Chat</string>

    <string name="feed_tab_home">Feed</string>
    <string name="feed_tab_all">All</string>
    <string name="feed_tab_me">Me</string>
    <string name="feed_error_load">Failed loading the data</string>
    <string name="feed_error_update">Failed updating the data</string>
    <string name="feed_reposted_pattern">reposted</string>

    <string name="new_post_title_reply">Reply</string>
    <string name="new_post_reply_pattern">Replying to @%s</string>
    <string name="new_post_hint">What\'s happening?</string>

    <!--These are for timestamps on statuses. For example: "16s" or "2d"-->
    <string name="abbreviated_in_years">in %dy</string>
    <string name="abbreviated_in_days">in %dd</string>
    <string name="abbreviated_in_hours">in %dh</string>
    <string name="abbreviated_in_minutes">in %dm</string>
    <string name="abbreviated_in_seconds">in %ds</string>
    <string name="abbreviated_years_ago">%dy</string>
    <string name="abbreviated_days_ago">%dd</string>
    <string name="abbreviated_hours_ago">%dh</string>
    <string name="abbreviated_minutes_ago">%dm</string>
    <string name="abbreviated_seconds_ago">%ds</string>

</resources>
