<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="tech.bigfig.romachat.view.screen.camera.CameraViewModel" />

        <variable
            name="handler"
            type="tech.bigfig.romachat.view.screen.camera.CameraFragmentHandler" />

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="@{safeUnbox(viewModel.hasPermissions) ? View.VISIBLE : View.GONE}">

            <tech.bigfig.romachat.view.screen.camera.utils.AutoFitTextureView
                android:id="@+id/camera_texture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/camera_take_photo"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="24dp"
                android:contentDescription="@string/a11y_take_photo"
                android:onClick="@{()-> handler.onTakePictureClick()}"
                android:src="@drawable/camera_shutter"
                android:visibility="@{safeUnbox(viewModel.noCameraFound) ? View.GONE: View.VISIBLE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/camera_chats"
                style="@style/CameraNavText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                android:onClick="@{()-> handler.onChatClick()}"
                android:text="@string/camera_to_chat"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/camera_feed"
                style="@style/CameraNavText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:onClick="@{()-> handler.onFeedClick()}"
                android:text="@string/camera_to_feed"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <ImageView
                android:id="@+id/camera_switch"
                android:layout_width="@dimen/camera_icon_size"
                android:layout_height="@dimen/camera_icon_size"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/a11y_switch_camera"
                android:onClick="@{()-> handler.onCameraSwitchClick()}"
                android:src="@drawable/ic_switch_camera"
                android:visibility="@{safeUnbox(viewModel.switchCameraSupported) ? View.VISIBLE : View.GONE}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/camera_flash"
                android:layout_width="@dimen/camera_icon_size"
                android:layout_height="@dimen/camera_icon_size"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/a11y_flash"
                android:onClick="@{()-> handler.onFlashClick()}"
                android:src="@{viewModel.flashEnabled ? @drawable/ic_flash_on : @drawable/ic_flash_off}"
                android:tint="@color/camera_icon"
                android:visibility="@{safeUnbox(viewModel.flashSupported) ? View.VISIBLE : View.GONE}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/camera_switch" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/camera_no_permission"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="@{safeUnbox(viewModel.hasPermissions) ? View.GONE : View.VISIBLE}">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/camera_permission_rationale"
                android:textAlignment="center"
                android:textSize="16sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="@{()-> handler.onTurnOnPermissionClick()}"
                android:text="@string/camera_permission_rationale_action" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/camera_no_camera_found"
            android:textAlignment="center"
            android:textSize="16sp"
            android:visibility="@{safeUnbox(viewModel.noCameraFound) ? View.VISIBLE : View.GONE}" />

    </FrameLayout>

</layout>