<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.text.TextUtils" />

        <import type="android.view.View" />

        <import type="tech.bigfig.romachat.view.screen.search.AddUserStatus" />

        <import type="tech.bigfig.romachat.view.utils.DateUtils" />

        <variable
            name="post"
            type="tech.bigfig.romachat.data.entity.Status" />

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/a11y_user_avatar"
                android:src="@drawable/default_user_avatar"
                app:avatarUrl="@{post.account.avatar}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:ellipsize="end"
                android:fontFamily="sans-serif-medium"
                android:singleLine="true"
                android:text="@{post.account.displayName}"
                android:textColor="@color/text_color"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/date"
                app:layout_constraintStart_toEndOf="@+id/avatar"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="User name" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true"
                android:textColor="@color/text_light_color"
                android:textSize="16sp"
                app:date="@{post.createdAt}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="10m" />

            <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/text_color"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/avatar"
                app:layout_constraintTop_toBottomOf="@+id/name"
                app:title="@{post}"
                tools:text="Title" />

            <TextView
                android:id="@+id/content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/text_color"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/avatar"
                app:layout_constraintTop_toBottomOf="@+id/title"
                tools:text="content" />

            <com.google.android.flexbox.FlexboxLayout
                android:id="@+id/attachments"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:dividerDrawable="@drawable/feed_media_divider"
                app:flexWrap="wrap"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/content"
                app:layout_constraintTop_toBottomOf="@+id/content"
                app:showDivider="middle|end" />

            <ImageView
                android:id="@+id/reply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/a11y_reply"
                android:src="@drawable/ic_reply"
                android:tint="@color/icon_tint"
                app:layout_constraintStart_toStartOf="@+id/name"
                app:layout_constraintTop_toBottomOf="@+id/attachments"
                tools:src="@drawable/ic_reply" />

            <TextView
                android:id="@+id/reply_count"
                style="@style/FeedIconText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@{Integer.toString(post.reblogsCount)}"
                android:visibility="@{post.reblogsCount > 0 ? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toBottomOf="@+id/reply"
                app:layout_constraintStart_toEndOf="@+id/reply"
                app:layout_constraintTop_toTopOf="@+id/reply"
                tools:text="1" />

            <ImageView
                android:id="@+id/favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="72dp"
                android:contentDescription="@string/a11y_favorite"
                android:src="@{post.favourited ? @drawable/ic_star : @drawable/ic_star_empty}"
                android:tint="@{post.favourited ? @color/orange_light : @color/icon_tint}"
                app:layout_constraintBottom_toBottomOf="@+id/reply"
                app:layout_constraintStart_toStartOf="@+id/name"
                app:layout_constraintTop_toTopOf="@+id/reply"
                tools:src="@drawable/ic_star_empty" />

            <TextView
                android:id="@+id/favorite_count"
                style="@style/FeedIconText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@{Integer.toString(post.favouritesCount)}"
                android:visibility="@{post.favouritesCount > 0 ? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toBottomOf="@+id/favorite"
                app:layout_constraintStart_toEndOf="@+id/favorite"
                app:layout_constraintTop_toTopOf="@+id/favorite"
                tools:text="1" />

            <ImageView
                android:id="@+id/repost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="144dp"
                android:contentDescription="@string/a11y_repost"
                android:src="@drawable/ic_repost"
                android:tint="@{post.reblogged ? @color/orange_light : @color/icon_tint}"
                android:visibility="@{post.rebloggingAllowed() ? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toBottomOf="@+id/reply"
                app:layout_constraintStart_toStartOf="@+id/name"
                app:layout_constraintTop_toTopOf="@+id/reply" />

            <TextView
                android:id="@+id/repost_count"
                style="@style/FeedIconText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@{Integer.toString(post.reblogsCount)}"
                android:visibility="@{post.reblogsCount > 0 ? View.VISIBLE : View.GONE}"
                app:layout_constraintBottom_toBottomOf="@+id/repost"
                app:layout_constraintStart_toEndOf="@+id/repost"
                app:layout_constraintTop_toTopOf="@+id/repost"
                tools:text="1" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:layout_gravity="bottom"
            android:background="@color/divider" />

    </FrameLayout>

</layout>